<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Restaroo</string>
    <string name="introduction_title">CHAT. SELL. BUY</string>
    <string name="signin">SIGNIN</string>
    <string name="register">REGISTER</string>
    <string name="signin_intro">Sign in with username and password</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="i_am_buyer">Buyer</string>
    <string name="i_am_seller">Seller</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="userName">USER NAME</string>
    <string name="business_name">BUSINESS NAME</string>
    <string name="phone_no">PHONE NO.</string>
    <string name="phone_number">phone number</string>
    <string name="country">COUNTRY</string>
    <string name="state">STATE</string>
    <string name="next">NEXT</string>
    <string name="verify">VERIFY</string>
    <string name="skip">Skip</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="select_category_to_get_deals_in">SELECT CATEGORY TO GET DEALS IN</string>
    <string name="selectstate">Select State</string>
    <string name="selectcountry">Select Country</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="market_chat">MARKET CHAT</string>
    <string name="save">SAVE</string>
    <string name="broadcast">Broadcast</string>
    <string name="select_country">select country</string>
    <string name="select_state">select state</string>
    <string name="send_code">We have sent code on your provided phone number.Please enter code below for verification.</string>
    <string name="number_verfication">NUMBER VERIFICATION</string>
    <string name="send_code_forgot">We have sent code on your provided phone number.Please enter code.</string>
    <string name="number_verfication_forgot">VERIFICATION CODE</string>
    <string name="email_details">Congratulations! Your phone number is verfied. May we please have your email ID?</string>
    <string name="email_confidential">We ensure your phone number and email ID will not be shared with anyone</string>
    <string name="email">EMAIL</string>
    <string name="enteremail">Enter your Email</string>
    <string name="myaccount_details">Please fill all the information to complete your account.</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="edit">EDIT</string>
    <string name="FORGOT_PASSWORD">FORGOT PASSWORD</string>
    <string name="forgot_password_details">Please enter your registered number.</string>
    <string name="enter_your_number">ENTER YOUR NUMBER</string>
    <string name="number_updation">NUMBER UPDATION</string>
    <string name="new_number_details">Please enter your new number.</string>
    <string name="enter_email_id">Get your password on email</string>
    <string name="RESET_PASSWORD">RESET PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="reset_password_details">Please enter your new password.</string>
    <string name="done">DONE</string>
    <string name="password_does_not_matches">Password and Confirm Password Does Not Matches</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="enter_password_details">You will need a password</string>
    <string name="user_request">User request</string>
    <string name="broadcast_details">Your request has been submmited to Admin and its in process. You will be notified with status in next 8 hrs.</string>
    <string name="createropsal_details">New Proposal has been created</string>
    <string name="filter">FILTER</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="pleaseselectatleastOneCategory">Please Select at Least One Category</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="addreview_details">Please add review and rating</string>
    <string name="write_here">Write here&#8230;</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="dialog_details">Changes done are not Saved. Do you want to Continue.</string>
    <string name="ok">OK</string>
    <string name="logout_dialog_details">ARE YOU REALLY WANT TO EXIT.</string>
    <string name="logout_btn">LOG OUT</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_dialog_details">ARE YOU REALLY WANT TO DELETE THIS POST.</string>
    <string name="delete">DELETE</string>
    <string name="deny_runtime_permission">Deny RunTime Permission</string>
    <string name="connect_socket">connect_socket</string>
    <string name="disconnect_socket">disconnect_socket</string>
    <string name="connection_error">connection_error</string>
    <string name="connection_timeout">connection_timeout</string>
    <string name="connecting_socket">connecting_socket</string>
    <string name="event_error">event_error</string>
    <string name="get_message_socket">get_message_socket</string>
    <string name="typing_socket">typing_socket</string>
    <string name="message_delete">message_delete</string>
    <string name="message_read">message_read</string>
    <string name="socket_error">socket_error</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="intro_screen_toolbar">Intro Screen Toolbar</string>
    <string name="dash_board_screen_toolbar">DashBoard Screen Toolbar</string>
    <string name="login_screen_toolbar">Login Screen Toolbar</string>
    <string name="sign_up_screen_toolbar">Sign Up Screen Toolbar</string>
    <string name="edit_profile_screen">Edit Profile Screen</string>
    <string name="restro_details_screen_toolbar">Restro Details Screen Toolbar</string>
    <string name="map_screen_toolbar">Map Screen toolbar</string>
    <string name="show_reviews_screen_toolbar">Show Review Screen Toolbar</string>
    <string name="add_reviews_screen_toolbar">ADD Review Screen Toolbar</string>
    <string name="cuisine_screen_toolbar">Cuisine Screen Toolbar</string>
    <string name="filter_screen_toolbar">Filter Screen Toolbar</string>
    <string name="full_screen_toolbar">Full Screen Toolbar</string>
    <string name="web_view_screen_toolbar">Web View Screen Toolbar</string>
    <string name="home">HOME</string>
    <string name="cusine">CUSINE</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="near_by">NEAR BY</string>
    <string name="location_toolbar">Location</string>
    <string name="categorypassing">Category Passing</string>
    <string name="start_view">Start View</string>
    <string name="side_menu">Side Menu</string>
    <string name="end_view">End View</string>
    <string name="before_end_view">Before End View</string>
    <string name="search_view">Search View</string>
    <string name="filter_view">Filter View</string>
    <string name="pay">Pay</string>
    <string name="chat_user_image">Chat User Image</string>
    <string name="private_viewpager_text">PRIVATE</string>
    <string name="public_viewpager_text">PUBLIC</string>
    <string name="hot_deals_viewpager_text">HOT DEALS</string>
    <string name="restro_list_adapter_view">Restro List Adapter View</string>
    <string name="restro_detail_adapter_view">Restro Details Adapter View</string>
    <string name="restro_review_adapter_view">Restro Review Adapter View</string>
    <string name="save_cusine_adapter_view">Save Cusine Adapter View</string>
    <string name="full_image_adapter_view">Full Image Adapter View</string>
    <string name="first_name_mandatory">First Name is mandatory</string>
    <string name="first_name_max_length">First Name is exceeded,max limit is 20</string>
    <string name="last_name_mandatory">Last Name is mandatory</string>
    <string name="last_name_max_length">Last Name is exceeded,max limit is 20</string>
    <string name="user_name_mandatory">User Name is mandatory</string>
    <string name="user_name_max_length">User Name is exceeded,max limit is 20</string>
    <string name="password_mandatory">Password is mandatory</string>
    <string name="password_max_length">Password length is incorrect, it should be in between 6 to 14</string>
    <string name="phone_name_mandatory">Phone Number is mandatory</string>
    <string name="phone_name_max_length">Phone Number is incorrect,range is between 8 to 15</string>
    <string name="register_country_mandatory">Register Country is mandatory</string>
    <string name="register_state_mandatory">Register State is mandatory</string>
    <string name="business_name_mandatory">Business Name is mandatory</string>
    <string name="Business_name_max_length">Business Name is exceeded,max limit is 40</string>
    <string name="new_password_mandatory">New Password is mandatory</string>
    <string name="new_password_max_length">New Password length is incorrect, it should be in between 6 to 14</string>
    <string name="confirm_password_mandatory">Confirm Password is mandatory</string>
    <string name="confirm_password_max_length">Confirm Password length is incorrect, it should be in between 6 to 14</string>
    <string name="email_mandatory">Email is mandatory</string>
    <string name="email_valid">Please enter valid email id</string>
    <string name="email_max_length">Email id is exceeded,max limit is 40</string>
    <string name="enable_internet">Please enable your internet</string>
    <string name="empty_rating">Please select rating</string>
    <string name="please_enter_otp_code">Please enter otp code</string>
    <string name="valid_otp_code">Please enter valid otp code</string>
    <string name="waiting_for_your_location">Waiting for your location</string>
    <string name="email_successfully_send">Email Successfully Send</string>
    <string name="empty_message">Please enter message</string>
    <string name="empty_proposal_message">Please enter proposal message</string>
    <string name="filter_applied_successfully">Filter Applied Successfully</string>
    <string name="empty_restro_list">No Restaurants found, please change in filter or search for different location</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="get_resto_list_api">Get Restro List API</string>
    <string name="get_resto_detail_api">Get Restro Detail API</string>
    <string name="google_Path_API">Google Path API</string>
    <string name="get_resto_reviews_api">Get Restro Reviews API</string>
    <string name="check_email_availability_api">Check Email Availability API</string>
    <string name="sign_up_api">Sign Up API</string>
    <string name="logout_api">Logout API</string>
    <string name="get_category_api">Get Category API</string>
    <string name="cancel_dailog">No</string>
    <string name="settings_dialog">Yes</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="please_enable_gps">"This app" Would like to use your current location</string>
    <string name="login">LOGIN</string>
    <string name="login_txt">login with your email password</string>
    <string name="dont_have_account">I Don\'t have an account?</string>
    <string name="sign_up_sign_in"> Sign Up</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_sub_header">SignUp for new account</string>
    <string name="your_name">Your name</string>
    <string name="your_email_id">Your email id</string>
    <string name="re_enter_password">RE - ENTER PASSWORD</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_sign_up"> Sign In</string>
</resources>