<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/custom_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/sign_in_title_txt_color"
            android:textSize="@dimen/margin_35"
            android:layout_marginEnd="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_13"/>

        <TextView
            android:id="@+id/sub_header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/login_txt"
            android:textColor="@color/sign_in_screen_txt_color"
            android:textSize="@dimen/margin_15"
            android:layout_marginEnd="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_13"/>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="8dp"
            app:cardMaxElevation="25dp"
            app:cardElevation="10dp"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginEnd="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_13">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:paddingStart="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:paddingBottom="@dimen/margin_8"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/entry_color_sign_in"
                    android:textSize="@dimen/margin_13" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@color/sign_in_screen_txt_color" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:paddingEnd="@dimen/margin_8"
                    android:paddingStart="@dimen/margin_8"
                    android:imeOptions="actionDone"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/entry_color_sign_in"
                    android:textSize="@dimen/margin_13" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_13"
            android:paddingEnd="@dimen/margin_8"
            android:paddingStart="@dimen/margin_8"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:gravity="end"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/forgot_password_sign_in"
            android:textSize="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_13"/>

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_13"
        android:layout_marginRight="@dimen/margin_13">


        <android.support.v7.widget.CardView
            android:id="@+id/login_with_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_13"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/sign_in_btn_color"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <TextView
                android:id="@+id/login_with_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/margin_13"
                android:paddingTop="@dimen/margin_13"
                android:text="@string/login"
                android:textColor="@color/sign_in_txt_color"
                android:textSize="@dimen/margin_18" />
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                android:paddingStart="@dimen/margin_8"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/dont_have_account"
                android:textColor="@color/dont_have_account_color"
                android:textSize="@dimen/margin_13" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/sign_up_sign_in"
                android:textColor="@color/signup_color"
                android:textSize="@dimen/margin_13" />

        </LinearLayout>
    </LinearLayout>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>